40 Turn starter into Boot auto-configuration (#73)
* 40 feat(starter): turn starter into boot auto-configuration

* 40 narrow starter auto-configuration scope